objects/Google_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Content_Type__c</fullName>
        <defaultValue>&quot;application/x-www-form-urlencoded&quot;</defaultValue>
        <label>Content-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_URL__c</fullName>
        <defaultValue>&quot;https://www.googleapis.com/oauth2/v4/token&quot;</defaultValue>
        <label>Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>access_type__c</fullName>
        <defaultValue>&quot;offline&quot;</defaultValue>
        <label>access type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>authorize_url__c</fullName>
        <defaultValue>&quot;https://accounts.google.com/o/oauth2/v2/auth&quot;</defaultValue>
        <label>authorize url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grant_type__c</fullName>
        <defaultValue>&quot;authorization_code&quot;</defaultValue>
        <label>grant_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>include_granted_scopes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>include granted scopes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>model__c</fullName>
        <defaultValue>&quot;builtin/stable&quot;</defaultValue>
        <label>model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prompt__c</fullName>
        <label>prompt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>consent</fullName>
                    <default>true</default>
                    <label>consent</label>
                </value>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>select_account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redirect_uri__c</fullName>
        <label>redirect uri</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>response_type__c</fullName>
        <defaultValue>&quot;code&quot;</defaultValue>
        <label>response_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scope__c</fullName>
        <label>scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Google Config</label>
    <pluralLabel>Google Configs</pluralLabel>
</CustomObject>